[gd_scene load_steps=9 format=2]

[ext_resource path="res://graphics/TutorialButtons.png" type="Texture" id=1]
[ext_resource path="res://graphics/WaterBackground.png" type="Texture" id=2]
[ext_resource path="res://scripts/levels/Level1.gd" type="Script" id=3]
[ext_resource path="res://fonts/lazy_dog.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ui_themes/theme1.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=2]
size = 128
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 1 )
region_rect = Rect2( 104, 84, 776, 219 )
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="StyleBoxEmpty" id=4]

[node name="Level1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="TopNav" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 135.0

[node name="QuestionsContainer" type="MarginContainer" parent="."]
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.25
margin_top = -135.0
margin_bottom = 135.0

[node name="NinePatchRect" type="NinePatchRect" parent="QuestionsContainer"]
margin_right = 1080.0
margin_bottom = 270.0
texture = ExtResource( 1 )
region_rect = Rect2( 104, 84, 776, 219 )

[node name="GridContainer" type="GridContainer" parent="QuestionsContainer/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 9

[node name="Label" type="Label" parent="QuestionsContainer/NinePatchRect/GridContainer"]
margin_right = 117.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "L"
align = 1
valign = 1

[node name="Label2" type="Label" parent="QuestionsContainer/NinePatchRect/GridContainer"]
margin_left = 121.0
margin_right = 238.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "O"
align = 1
valign = 1

[node name="Label3" type="Label" parent="QuestionsContainer/NinePatchRect/GridContainer"]
margin_left = 242.0
margin_right = 359.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "G"
align = 1
valign = 1

[node name="Label4" type="Label" parent="QuestionsContainer/NinePatchRect/GridContainer"]
margin_left = 363.0
margin_right = 480.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "B"
align = 1
valign = 1

[node name="Label5" type="Label" parent="QuestionsContainer/NinePatchRect/GridContainer"]
margin_left = 484.0
margin_right = 600.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "("
align = 1
valign = 1

[node name="Label6" type="Label" parent="QuestionsContainer/NinePatchRect/GridContainer"]
margin_left = 604.0
margin_right = 720.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "A"
align = 1
valign = 1

[node name="Label7" type="Label" parent="QuestionsContainer/NinePatchRect/GridContainer"]
margin_left = 724.0
margin_right = 840.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = ")"
align = 1
valign = 1

[node name="Label8" type="Label" parent="QuestionsContainer/NinePatchRect/GridContainer"]
margin_left = 844.0
margin_right = 960.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "="
align = 1
valign = 1

[node name="Label9" type="Label" parent="QuestionsContainer/NinePatchRect/GridContainer"]
margin_left = 964.0
margin_right = 1080.0
margin_bottom = 270.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "C"
align = 1
valign = 1

[node name="AnswersContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -270.0

[node name="VBoxContainer" type="VBoxContainer" parent="AnswersContainer"]
margin_right = 1080.0
margin_bottom = 270.0

[node name="HFlowContainer" type="HFlowContainer" parent="AnswersContainer/VBoxContainer"]
margin_right = 1080.0
margin_bottom = 129.0

[node name="Answer1" type="Button" parent="AnswersContainer/VBoxContainer/HFlowContainer"]
margin_right = 538.0
margin_bottom = 129.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "text"

[node name="Answer2" type="Button" parent="AnswersContainer/VBoxContainer/HFlowContainer"]
margin_left = 542.0
margin_right = 1080.0
margin_bottom = 129.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "text"

[node name="HFlowContainer2" type="HFlowContainer" parent="AnswersContainer/VBoxContainer"]
margin_top = 133.0
margin_right = 1080.0
margin_bottom = 262.0

[node name="Answer3" type="Button" parent="AnswersContainer/VBoxContainer/HFlowContainer2"]
margin_right = 538.0
margin_bottom = 129.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "text"

[node name="Answer4" type="Button" parent="AnswersContainer/VBoxContainer/HFlowContainer2"]
margin_left = 542.0
margin_right = 1080.0
margin_bottom = 129.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "text"

[node name="SubmitButtonContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 129.0

[node name="SubmitButton" type="Button" parent="SubmitButtonContainer"]
margin_right = 1083.0
margin_bottom = 129.0
theme = ExtResource( 5 )
text = "SUBMIT"

[connection signal="pressed" from="AnswersContainer/VBoxContainer/HFlowContainer/Answer1" to="." method="_on_Answer1_pressed"]
[connection signal="pressed" from="AnswersContainer/VBoxContainer/HFlowContainer/Answer2" to="." method="_on_Answer2_pressed"]
[connection signal="pressed" from="AnswersContainer/VBoxContainer/HFlowContainer2/Answer3" to="." method="_on_Answer3_pressed"]
[connection signal="pressed" from="AnswersContainer/VBoxContainer/HFlowContainer2/Answer4" to="." method="_on_Answer4_pressed"]
[connection signal="pressed" from="SubmitButtonContainer/SubmitButton" to="." method="_on_SubmitButton_pressed"]
